--- a/lorem.html
+++ b/lorem.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-       A explicabo quis reprehenderit maiores facilis est harum! Dolor qui obcaecati,
-       consectetur ab beatae provident dolore blanditiis error odio temporibus autem officia.</p>
+    <h2>lorem</h2>
+    <img src="" alt="">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Sint soluta perferendis quidem similique, unde omnis ipsum laborum.
+         Architecto voluptate omnis ratione deleniti asperiores, 
+         praesentium ad nobis nesciunt impedit, vero quasi!</p>
 </body>
 </html>
